# RecommanderAPI

./: .gitignore  CMakeLists.txt  README.md  config.h  main.cpp
core/: MimeType.cpp  MimeType.h  Utils.cpp  Utils.h  types.cpp  types.h
core/algoritm/: PearsonCorrelationCoefficien.cpp  PearsonCorrelationCoefficien.h  SlopeOne.cpp  SlopeOne.h  SymSpell.cpp  SymSpell.h
core/data/: BaseDataInfo.cpp  BaseDataInfo.h  BaseDataSource.h  CvsDataSource.cpp  CvsDataSource.h  GeneralDataInfo.cpp  GeneralDataInfo.h  Index.cpp  Index.h  MongoDbDataSource.h
core/data/impl/: Block.cpp  Block.h  BlockStorage.cpp  BlockStorage.h  RecordStorage.cpp  RecordStorage.h
core/server/: AppServer.cpp  AppServer.h  ServerConfig.cpp  ServerConfig.h
core/server/action/: AddItemAction.cpp  AddItemAction.h  BaseAction.cpp  BaseAction.h  SearchAction.cpp  SearchAction.h  UserRecommendAction.cpp  UserRecommendAction.h
core/server/controller/: BaseController.cpp  BaseController.h
core/server/handler/: ActionHandler.cpp  ActionHandler.h  BaseHandler.h  HtmlHandler.cpp  HtmlHandler.h  StaticFileHandler.cpp  StaticFileHandler.h
include/crow/: settings.h
model/: Product.h  Rating.h
www/: index.html
www/static/javascripts/: server.js
